Prefer Path.of() over Paths.get()